--- a/src/03/3-7 代码分割-async使用/index.html
+++ b/src/03/3-7 代码分割-async使用/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+    <script src="./dist/manifest.bundle.js"></script>
+    <script src="./dist/vendor.bundle.js"></script>
     <script src="./dist/pageA.bundle.js"></script>
+    <script src="./dist/pageB.bundle.js"></script>
 </body>
 </html>
